Upgrade ZK to 6.5.1.1 with silvertail theme

--- a/WebContent/WEB-INF/zul/home.zul
+++ b/WebContent/WEB-INF/zul/home.zul
@@ -29,7 +29,8 @@
 		<rows>
 			<row>
 				<label value="Index name: " />
-				<textbox value="@bind(home.newIndexName)" cols="50" />
+				<textbox value="@bind(home.newIndexName)"
+					instant="true" />
 				<label
 					value="Choose a name for the index that will be created" />
 				<cell rowspan="3">
