--- a/WebContent/WEB-INF/zul/schema/fields.zul
+++ b/WebContent/WEB-INF/zul/schema/fields.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2008-2010 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2008-2012 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -14,28 +14,31 @@
 	copy of the GNU General Public License along with OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<window id="fields"
-	use="com.jaeksoft.searchlib.web.controller.schema.FieldsController">
+<window apply="org.zkoss.bind.BindComposer"
+	viewModel="@id('fields') @init('com.jaeksoft.searchlib.web.controller.schema.FieldsController')"
+	id="fields">
 
-	<vbox id="editField" width="100%">
+	<vbox width="100%">
 		<hbox width="100%">
 			<panel title="Select default field" border="normal">
 				<panelchildren>
 					<listbox mold="select"
-						selectedItem="@{fields.selectedDefault}"
-						model="@{fields.indexedFields}">
-						<listitem self="@{each=indexedField}"
-							label="@{indexedField}" />
+						selectedItem="@bind(fields.selectedDefault)"
+						model="@load(fields.indexedFields)">
+						<template name="model" var="indexedField">
+							<listitem label="@load(indexedField)" />
+						</template>
 					</listbox>
 				</panelchildren>
 			</panel>
 			<panel title="Select unique field" border="normal">
 				<panelchildren>
 					<listbox mold="select"
-						selectedItem="@{fields.selectedUnique}"
-						model="@{fields.indexedFields}">
-						<listitem self="@{each=indexedField}"
-							label="@{indexedField}" />
+						selectedItem="@bind(fields.selectedUnique)"
+						model="@load(fields.indexedFields)">
+						<template name="model" var="indexedField">
+							<listitem label="@load(indexedField)" />
+						</template>
 					</listbox>
 				</panelchildren>
 			</panel>
@@ -43,7 +46,7 @@
 
 		<separator height="5" />
 
-		<panel title="@{fields.currentEditMode}" border="normal">
+		<panel title="@load(fields.currentEditMode)" border="normal">
 			<panelchildren>
 				<grid>
 					<columns sizable="false">
@@ -54,70 +57,72 @@
 					<rows>
 						<row>
 							<label value="Name: " />
-							<textbox value="@{fields.field.name}"
-								width="95%" readonly="@{fields.selected}" />
+							<textbox value="@bind(fields.field.name)"
+								width="95%" readonly="@load(fields.selected)" />
 							<label
 								value="Choose a name for the field that will be created" />
 						</row>
 						<row>
 							<label value="Indexed: " />
 							<listbox mold="select"
-								selectedItem="@{fields.field.indexed}"
-								model="@{fields.indexedList}">
-								<listitem self="@{each=indexed}"
-									label="@{indexed.value}" value="@{indexed}" />
+								selectedItem="@bind(fields.field.indexed)"
+								model="@load(fields.indexedList)">
+								<listitem label="@load(each.value)"
+									value="@load(each)" />
 							</listbox>
 							<label
-								value="@{fields.field.indexed.description}" />
+								value="@load(fields.field.indexed.description)" />
 						</row>
 						<row>
 							<label value="Stored: " />
 							<listbox mold="select"
-								selectedItem="@{fields.field.stored}"
-								model="@{fields.storedList}">
-								<listitem self="@{each=stored}"
-									label="@{stored.value}" value="@{stored}" />
+								selectedItem="@bind(fields.field.stored)"
+								model="@load(fields.storedList)">
+								<listitem label="@load(each.value)"
+									value="@load(each)" />
 							</listbox>
 							<label
-								value="@{fields.field.stored.description}" />
+								value="@load(fields.field.stored.description)" />
 						</row>
 						<row>
 							<label value="TermVector: " />
 							<listbox mold="select"
-								selectedItem="@{fields.field.termVector}"
-								model="@{fields.termVectorList}">
-								<listitem self="@{each=termVector}"
-									label="@{termVector.value}" value="@{termVector}" />
+								selectedItem="@bind(fields.field.termVector)"
+								model="@load(fields.termVectorList)">
+								<listitem label="@load(each.value)"
+									value="@load(each)" />
 							</listbox>
 							<label
-								value="@{fields.field.termVector.description}" />
+								value="@load(fields.field.termVector.description)" />
 						</row>
 						<row>
 							<label value="Analyzer: " />
 							<listbox mold="select"
-								selectedItem="@{fields.field.indexAnalyzer}"
-								model="@{fields.analyzerNameList}">
-								<listitem self="@{each=analyzer}"
-									label="@{analyzer}" value="@{analyzer}" />
+								selectedItem="@bind(fields.field.indexAnalyzer)"
+								model="@load(fields.analyzerNameList)">
+								<listitem label="@load(analyzer)"
+									value="@load(analyzer)" />
 							</listbox>
 							<label
 								value="Choose the analyzer you need for that field." />
 						</row>
 						<row spans="3">
 							<hbox>
-								<hbox visible="@{fields.selected}">
+								<hbox
+									visible="@load(fields.selected)">
 									<button label="Cancel"
-										forward="onCancel" />
+										onClick="@command('onCancel')" />
 									<space width="10px" />
 									<button label="Save"
-										forward="onSave" />
+										onClick="@command('onSave')" />
 									<space width="30px" />
 									<button label="Delete"
-										forward="onDelete" />
+										onClick="@command('onDelete')" />
 								</hbox>
-								<hbox visible="@{fields.notSelected}">
+								<hbox
+									visible="@load(fields.notSelected)">
 									<button label="Add"
-										forward="onSave" />
+										onClick="@command('onSave')" />
 								</hbox>
 							</hbox>
 						</row>
@@ -131,8 +136,8 @@
 		<panel title="List of existing fields and their settings"
 			border="normal">
 			<panelchildren>
-				<listbox model="@{fields.list}"
-					selectedItem="@{fields.selectedField}">
+				<listbox model="@load(fields.list)"
+					selectedItem="@bind(fields.selectedField)">
 					<listhead>
 						<listheader label="Name" />
 						<listheader width="140px"
@@ -142,13 +147,18 @@
 						<listheader width="140px" label="TermVector" />
 						<listheader width="240px" label="Analyser" />
 					</listhead>
-					<listitem self="@{each=field}">
-						<listcell label="@{field.name}" />
-						<listcell label="@{field.indexed.value}" />
-						<listcell label="@{field.stored.value}" />
-						<listcell label="@{field.termVector.value}" />
-						<listcell label="@{field.indexAnalyzer}" />
-					</listitem>
+					<template name="model" var="field">
+						<listitem>
+							<listcell label="@load(field.name)" />
+							<listcell
+								label="@load(field.indexed.value)" />
+							<listcell label="@load(field.stored.value)" />
+							<listcell
+								label="@load(field.termVector.value)" />
+							<listcell
+								label="@load(field.indexAnalyzer)" />
+						</listitem>
+					</template>
 				</listbox>
 			</panelchildren>
 		</panel>
